...
        component={LevelMapScreen}
        options={{ tabBarButtonTestID: 'tab-learn' }}
      />
      <Tab.Screen
        name="Songs"
        component={SongLibraryScreen}
        options={{ tabBarButtonTestID: 'tab-songs' }}
      />
      <Tab.Screen
        name="Social"
        component={SocialScreen}
        options={{ tabBarButtonTestID: 'tab-social' }}
      />
      <Tab.Screen
        name="Profile"
        component={ProfileScreen}
        options={{ tabBarButtonTestID: 'tab-profile' }}
      />
    </Tab.Navigator>
  );
}


...
